# ranobarr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pytest.ini
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial_backend.py  0002_add_chapter_snapshots.py  0003_add_content_cache.py  0004_add_binary_asset_cache.py  0005_add_source_credentials.py  0006_add_job_events.py  0007_add_book_metadata_fields.py  0008_add_library_preferences.py  0009_add_opds_visibility_and_download_state.py  0010_add_koreader_device_books.py  0011_replace_koreader_device_books_with_sync_tables.py  0012_add_last_chapter_added_at.py
server/app/: __init__.py  config.py  main.py
server/app/artifacts/: __init__.py  router.py  schemas.py  service.py
server/app/builds/: __init__.py  assets.py  content.py  epub.py  media.py  service.py  storage.py
server/app/core/: database.py  errors.py  jobs.py  logging.py  security.py  titles.py
server/app/jobs/: __init__.py  router.py  schemas.py  service.py
server/app/koreader/: __init__.py  router.py  schemas.py  service.py
server/app/models/: __init__.py  artifacts.py  binary_assets.py  books.py  chapters.py  content_cache.py  job_events.py  jobs.py  koreader.py  source_credentials.py
server/ranobarr_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/tests/: conftest.py  test_auth.py  test_build_assets.py  test_build_content.py  test_build_epub.py  test_build_service.py  test_job_runtime.py  test_opds.py  test_tracking_endpoints.py
web/: index.html  (+4 more)
(+33 files in other folders)
