[project]
name = "ranobarr-server"
version = "0.1.0"
description = "FastAPI backend for tracking RanobeLib titles and building ebook artifacts"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.19",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.31",
    "aiosqlite>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
